cloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      app: cdh-http-app
  template:
    metadata:
      labels:
        app: cdh-http-app
        environment: cloud
      annotations:
        io.katacontainers.config.agent.policy: cGFja2FnZSBhZ2VudF9wb2xpY3kKCmltcG9ydCBmdXR1cmUua2V5d29yZHMuaW4KaW1wb3J0IGZ1dHVyZS5rZXl3b3Jkcy5pZgppbXBvcnQgZnV0dXJlLmtleXdvcmRzLmV2ZXJ5CgpkZWZhdWx0IEFkZEFSUE5laWdoYm9yc1JlcXVlc3QgOj0gdHJ1ZQpkZWZhdWx0IEFkZFN3YXBSZXF1ZXN0IDo9IHRydWUKZGVmYXVsdCBDbG9zZVN0ZGluUmVxdWVzdCA6PSB0cnVlCmRlZmF1bHQgQ29weUZpbGVSZXF1ZXN0IDo9IHRydWUKZGVmYXVsdCBDcmVhdGVTYW5kYm94UmVxdWVzdCA6PSB0cnVlCmRlZmF1bHQgRGVzdHJveVNhbmRib3hSZXF1ZXN0IDo9IHRydWUKZGVmYXVsdCBHZXRNZXRyaWNzUmVxdWVzd [...]
    spec:
      runtimeClassName: kata-remote
      containers:
      - name: cdh-http-app
        image: quay.io/eesposit/http-echo:latest
        resources:
          request:
            memory: "1Gi" # TODO: set this
          limits:
            memory: "1Gi" # TODO: set this
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          privileged: true
