prem.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: on-prem-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdh-http-app
  template:
    metadata:
      labels:
        app: cdh-http-app
    spec:
      containers:
      - name: cdh-http-app
        image: quay.io/eesposit/http-echo:latest
        resources:
          request:
            memory: "1Gi" # TODO: set this
          limits:
            memory: "1Gi" # TODO: set this
        ports:
        - containerPort: 8080
        securityContext:
            privileged: true
