network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdh-http-app-service
  labels:
    app: cdh-http-app
spec:
  selector:
    app: cdh-http-app
  ports:
    - port: 8888
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cdh-http-app-route
  namespace: default
  labels:
    app: cdh-http-app
spec:
  to:
    kind: Service
    name: cdh-http-app-service
  port:
    targetPort: 8888
